Fix various minor layout bugs

--- a/site/layouts/partials/skill.html
+++ b/site/layouts/partials/skill.html
@@ -1,4 +1,4 @@
 <li class="skill">
     <div class='skill-icon {{ .iconClass }}'>{{ safeHTML .icon }}</div>
-    <p class="skill-text">{{ safeHTML .text }}</p>
+    <div class="skill-text">{{ safeHTML .text }}</div>
 </li>
