--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -111,11 +111,12 @@
               </g>
           </svg>
 
-            <div class="intro">
-              <h1>About</h1>
-              <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium. I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript. For more information about my professional experience, please have a look at my <a href="{{ .Site.BaseURL }}resume">resume</a>.</p>
-            </div>
+          <section class="intro">
+            <h1>About</h1>
+            <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium. I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript. For more information about my professional experience, please have a look at my <a href="{{ .Site.BaseURL }}resume">resume</a>.</p>
+          </section>
 
+          <section class="skills">
             <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
             <ul class="❤">
                 {{ partial "skill" (dict "icon" "&lt/&gt" "iconClass" "html" "text" "Clean, semantic HTML markup") }}
@@ -135,13 +136,16 @@
                 {{ partial "skill" (dict "icon" "<abbr title='Keep It Simple, Stupid'>KISS</abbr>" "iconClass" "kiss" "text" "Avoid unnecessary complexity.") }}
                 {{ partial "skill" (dict "icon" "<abbr title='JavaScript, APIs and Markup'>JAMstack</abbr>" "iconClass" "jam" "text" "The <span><a href='https://jamstack.org/' target='_blank'>JAMstack</a> is my jam.</span>") }}
             </ul>
+          </section>
 
+          <section class="other">
             <h2>Outside of web development</h2>
             <p>I love hiking and running, especially out in the woods.</p>
             <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients, cooking (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company. I find the whole process very similar to web development in some aspects.</p>
             <p>I play video games (though not as much as I used to), mostly on PC, and I have a particular fondness for rich narrative experiences and emergent stories.</p>
             <p>Other than that, I enjoy spending time with friends, preferably over a nice, cool beer 🍺.</p>
-          </div>
+          </section>
+        </div>
     </main>
 </div>
 
