--- a/site/layouts/contact/single.html
+++ b/site/layouts/contact/single.html
@@ -30,9 +30,7 @@
             <input type="submit" value="Send">
           </div>
         </form>
-        <p>Or feel free to drop me a line at maelbrunet
-          <span class="highlight">[at]</span>gmail
-          <span class="highlight">[dot]</span>com</p>
+        <p>Or feel free to drop me a line at maelbrunet<span class="highlight">[at]</span>gmail<span class="highlight">[dot]</span>com</p>
       </section>
     </div>
   </main>
