--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 @import "vendor/normalize";
 
 // 3. Base stuff
-@import "base/base", "base/helpers";
+@import "base/base", "base/fonts", "base/helpers";
 
 // 4. Layout-related sections
 @import "layout/header", "layout/footer", "layout/print";
