--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -25,7 +25,7 @@
             </a>
         </div>
         <div class="copyright">
-            Hand-crafted with ♥️ and ☕. // 0 lines of JQuery were <span class="strike">hurt</span> used in making this website. // Code source available on
+            Hand-crafted with ♥️ and ☕. // Source code available on
             <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>. // Try typing "unicorn" anywhere.
         </div>
     </footer>
