--- a/src/styles/components/_cookies.scss
+++ b/src/styles/components/_cookies.scss
@@ -8,14 +8,15 @@
   padding: 2rem;
   background-color: $link-color;
   color: #fff;
-  transition: opacity .3s ease-out;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s ease-out;
 
   .close-button {
     float: right;
     margin: 0 0 1rem 1rem;
     padding: 0;
-    transition: transform .3s ease-out;
-    
+    transition: transform 0.3s ease-out;
+
     @include on-event {
       background-color: $link-color;
       transform: rotate(15deg);
@@ -30,7 +31,7 @@
 
   .cookies-icon {
     float: left;
-    margin: .5rem 1rem 0 0;
+    margin: 0.5rem 1rem 0 0;
     fill: #fff;
     height: 2rem;
     width: 2rem;
