--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -121,14 +121,14 @@ nav {
       ~ .main-nav {
         display: block;
         position: fixed;
-        z-index: 100;
+        z-index: 50;
         top: 0;
         left: 0;
         height: 100%;
         width: calc(100% + 20px);
         margin-left: -20px;
-        padding: 120px 20px 0 0;
-        text-align: right;
+        padding: 0 20px 0 20px;
+        text-align: left;
         background-image: linear-gradient(
           to bottom right,
           $blue 0%,
