fix misc a11y issues

--- a/site/layouts/partials/cookies.html
+++ b/site/layouts/partials/cookies.html
@@ -1,5 +1,6 @@
 <div class="cookies js-cookies is-hidden">
   <button class="close-button js-cookies-agree">
+  <div class="sr-only">Close</div>
     <svg class="icon close-icon">
         <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#cross"></use>
       </svg>
