--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,24 +1,28 @@
     <footer>
         <div class="social">
             <a href="https://www.linkedin.com/in/ma%C3%ABl-brunet-b5876118/" target="_blank" class="social-link">
+                <div class="sr-only">LinkedIn</div>
                 <svg class="social-icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#linkedin"></use>
                 </svg>
             </a>
 
             <a href="https://github.com/maeligg" target="_blank" class="social-link">
+                <div class="sr-only">Github</div>
                 <svg class="social-icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#github"></use>
                 </svg>
             </a>
 
             <a href="https://codepen.io/Maelig/" target="_blank" class="social-link">
+                <div class="sr-only">CodePen</div>
                 <svg class="social-icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#codepen"></use>
                 </svg>
             </a>
 
             <a href="https://twitter.com/maelb" target="_blank" class="social-link">
+                <div class="sr-only">Twitter</div>
                 <svg class="social-icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#twitter"></use>
                 </svg>
