--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,6 +1,7 @@
 <header>
     <nav>
         <a href="{{ .Site.BaseURL }}" class="logo">
+            <div class="sr-only">Logo</div>
             <svg class="logo-letters" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 159.9 100.7" width="120" height="120">
                 <g>
                     <path class="first-letter" id="laukia" d="M.9 1.4c6.9-3.6 12.2 4.1 12.2 9.2 0 10.2-1.5 37.3-.8 39.6.7-3 11.4-39.3 22.2-32.9 8 4.8 7.5 15.2 7.5 16.8 7-21.9 14-22.4 15.7-21.9 15.7 4 9.8 33.3 9.8 43.2-.7 8.1-.6 22.1-.4 30.2.7 23.9 18.5-1.7 20.9-34.8.3-1.5 2.8-.6 2.4 2.7-2.9 35.1-14.3 50.1-26.6 46-12.3-4.1-7.5-39.6-6.8-52.8 0-8.1 3.4-29-.9-29.3-2.7-.2-10.4 17.1-11.1 19.4-5.4 13.9-3.5 34.4-4.2 42.5-2.3 14.8-10.7 2.1-10.5-1.5.7-11.8 1.2-55-.8-55.5-4.3-.1-14.8 34.6-16.4 39.7 0 10.1-2 16.1-2.7 19.1C4.3 97.2.8 73.2.6 65.5.3 54.6.6 32 1.1 16.6 1.4 8.6.4 2.8.9 1.4z"/>
