restore picture and fix some print styles

--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -5,111 +5,7 @@
 <div id="barba-wrapper">
     <main class="barba-container about">
         <div class="container">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" class="me">
-            <path fill="#6c6c6c" d="M0 0h1024v1024H0z"/>
-            <g fill-opacity=".502">
-                <path fill="#c2c2c2" d="M1030 38l-8 1048-672-520z"/>
-                <path fill="#080808" d="M630-34L270 698-62 10z"/>
-                <path fill="#ececec" d="M738 222l-336-24 208 276z"/>
-                <path fill="#cdcdcd" d="M506 1010l512 76 68-500z"/>
-                <path d="M342 82l484 184L662 42z"/>
-                <path fill="#2d2d2d" d="M574 434l-368 652 396-172z"/>
-                <path d="M358 902L202 322 362 98z"/>
-                <path fill="#535353" d="M318-22L-62 202l100 884z"/>
-                <path fill="#aaa" d="M766 450l308 552-604-188z"/>
-                <path fill="#4b4b4b" d="M310 374l388 132 172-96z"/>
-                <path fill="#959595" d="M342 414l60-220 312-12z"/>
-                <path d="M742 102L366 62 222 274z"/>
-                <path fill="#6e6e6e" d="M1086 62L766 42l32 500z"/>
-                <path fill="#d3d3d3" d="M598 586l256 92-300-312z"/>
-                <path fill="#484848" d="M318 546l268-84-240-200z"/>
-                <path fill="#1f1f1f" d="M490 682l176-12-108-88z"/>
-                <path fill="#272727" d="M566 918L326 606v324z"/>
-                <path fill="#cdcdcd" d="M690 194l116 196-396-24z"/>
-                <path fill="#090909" d="M730 186l88 200-20-132z"/>
-                <path fill="#9c9c9c" d="M326 482l204 64-96 184z"/>
-                <path fill="#5a5a5a" d="M178 1086l56-864-296-12z"/>
-                <path fill="#252525" d="M590 822l64-52-148-8z"/>
-                <path fill="#0e0e0e" d="M594 922l88-36-240-24z"/>
-                <path fill="#050505" d="M398 62h256l144 184z"/>
-                <path fill="#5d5d5d" d="M682 78l404-140-752 52z"/>
-                <path fill="#575757" d="M538 158l-188 68-32 160z"/>
-                <path fill="#a7a7a7" d="M1026 858V450L550 858z"/>
-                <path d="M282 518l-56-196L346 78z"/>
-                <path fill="#d0d0d0" d="M802 674l-20-192-136 168z"/>
-                <path fill="#b9b9b9" d="M462 1086l624-88-412-88z"/>
-                <path fill="#666" d="M334 534l64 268 192 68z"/>
-                <path fill="#2f2f2f" d="M302 366l236 24-96 124z"/>
-                <path fill="#3e3e3e" d="M-6 2l264-64L-6 538z"/>
-                <path fill="#727272" d="M638 594l88 124-196-4z"/>
-                <path fill="#898989" d="M1074 102l-48 264-404 192z"/>
-                <path fill="#b8b8b8" d="M606 542l76-340-200-16z"/>
-                <path fill="#4a4a4a" d="M654 394l12 124 96-124z"/>
-                <path fill="#777" d="M834 238l252-200-420 32z"/>
-                <path fill="#656565" d="M186 1086l32-824-280 732z"/>
-                <path fill="#525252" d="M270 114L642 2 342-62z"/>
-                <path fill="#5d5d5d" d="M610 1082l-96-124-324 40z"/>
-                <path fill="#010101" d="M366 78l-60 196L586 42z"/>
-                <path fill="#8a8a8a" d="M618 178l-128-8-116 216z"/>
-                <path fill="#9b9b9b" d="M998 502L846 302l-148 768z"/>
-                <path fill="#bfbfbf" d="M790 322l-76-108-72 196z"/>
-                <path fill="#707070" d="M506 450l-140-28 96-20z"/>
-                <path fill="#3d3d3d" d="M826 358l-20 96-8-120z"/>
-                <path fill="#343434" d="M814 310L658 170l100-32z"/>
-                <path fill="#2c2c2c" d="M210 458l8 200 192 36z"/>
-                <path fill="#797979" d="M546 738l8 120-116-140z"/>
-                <path fill="#373737" d="M530 874l124 40 24-52z"/>
-                <path fill="#9c9c9c" d="M666 458l116-20-76-8z"/>
-                <path fill="#262626" d="M490 378l-84 12 168 68z"/>
-                <path fill="#c5c5c5" d="M666 666l-52-200 164 212z"/>
-                <path fill="#6c6c6c" d="M550 394l48 24-100 136z"/>
-                <path fill="#292929" d="M610 814l-72-44 92 24z"/>
-                <path fill="#6c6c6c" d="M326 906l-60-296-68 476z"/>
-                <path fill="#636363" d="M330 490l76-84-48 224z"/>
-                <path fill="#747474" d="M470 366l-12-172-76 188z"/>
-                <path fill="#2e2e2e" d="M558 646l-64 88-56-40z"/>
-                <path d="M326 230l-100 44 24 216z"/>
-                <path fill="#646464" d="M-26 1082l192-776 108 612z"/>
-                <path fill="#1e1e1e" d="M326 710L202 502l136-20z"/>
-                <path fill="#b3b3b3" d="M614 834l184-240-96 256z"/>
-                <path fill="#a6a6a6" d="M1086 458l-284 628-140-184z"/>
-                <path fill="#595959" d="M458 34l272 44 32-140z"/>
-                <path fill="#141414" d="M402 446l72 16-72 28z"/>
-                <path fill="#858585" d="M1086 206l-304-48 44 260z"/>
-                <path fill="#343434" d="M514 630l-8-40 152 20z"/>
-                <path fill="#999" d="M506 650l-12-212-88 232z"/>
-                <path fill="#6a6a6a" d="M418 986l-96 100 40-180z"/>
-                <path fill="#353535" d="M346 662l-32 324 164-196z"/>
-                <path fill="#c2c2c2" d="M738 234v160L494 230z"/>
-                <path fill="#a9a9a9" d="M542 690l68-20 88 36z"/>
-                <path fill="#c2c2c2" d="M606 1058l84 28 4-208z"/>
-                <path fill="#878787" d="M594 526l-16-68-4 116z"/>
-                <path fill="#9f9f9f" d="M546 398l-108-80 76-112z"/>
-                <path fill="#414141" d="M798 510V402l24 28z"/>
-                <path fill="#525252" d="M106 162l220-68-388 624z"/>
-                <path fill="#9e9e9e" d="M530 974l172-96-148 152z"/>
-                <path fill="#636363" d="M238 486l-32-172-32 132z"/>
-                <path fill="#505050" d="M706 986l20 40-16 36z"/>
-                <path fill="#bababa" d="M598 630l-4-208 80 104z"/>
-                <path fill="#c8c8c8" d="M814 614l-240-40 192-52z"/>
-                <path fill="#a3a3a3" d="M758 510l40 52-4-180z"/>
-                <path fill="#b6b6b6" d="M562 722l128 72 12-60z"/>
-                <path fill="#080808" d="M618 66l140 88-452-12z"/>
-                <path fill="#919191" d="M1010 366L806 554l12-220z"/>
-                <path fill="#494949" d="M450 1034L338 898l224 16z"/>
-                <path fill="#878787" d="M370 514l172 28-4-72z"/>
-                <path fill="#030303" d="M294 210l-68 204 76 184z"/>
-                <path fill="#363636" d="M630 422h128l-52-24z"/>
-                <path fill="#969696" d="M598 870l-92-64 112 16z"/>
-                <path fill="#7f7f7f" d="M618 426l36-28 8 128z"/>
-                <path fill="#5c5c5c" d="M674 682l-88-92 8 80z"/>
-                <path fill="#505050" d="M402 818l-76-256 200 292z"/>
-                <path fill="#4e4e4e" d="M714 458l68 32-140-12z"/>
-                <path fill="#676767" d="M466 838l68 8 44-184z"/>
-                <path fill="#8a8a8a" d="M706 250l40-4-80-64z"/>
-                <path fill="#3d3d3d" d="M210 538l84 60-44 96z"/>
-              </g>
-          </svg>
+          <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me">
 
           <section class="intro">
             <h1>About</h1>
