--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -8,15 +8,15 @@
             <h1>Résumé / Curriculum Vitae</h1>
             <p class="notice-web">This page is optimised for print️, feel free to print it out or export it to PDF if that's your thing. For more information about myself, head over to the
                 <a href="{{ .Site.BaseURL }}about">about</a> page.</p>
-            <p class="notice-print">This document is also available as a web page at <a href="https://www.maelbrunet.com/resume">https://www.maelbrunet.com/resume</a></p>
+            <p class="print-only">This document is also available as a web page at <a href="https://www.maelbrunet.com/resume">https://www.maelbrunet.com/resume</a></p>
 
-            <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me">
+            <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me print-only">
 
-            <p class="contact-info">📧 maelbrunet<span class="highlight">[at]</span>gmail<span class="highlight">[dot]</span>com</p>
+            <p class="print-only">📧 maelbrunet<span class="highlight">[at]</span>gmail<span class="highlight">[dot]</span>com</p>
 
             <h2>Summary</h2>
             <ul class="summary">
-                <li>I am a self-taught front-end web developer and UI designer, currently based in Brussels (Belgium).</li>
+                <li>I am a front-end web developer and UI designer with a focus on performance and accessibility, currently based in Brussels (Belgium).</li>
                 <li>I am highly proficient in the technologies that are at the core of front-end development : HTML, CSS and Javascript. I believe very strong knowledge of these foundations is essential to being a good front-end developer, and everything else (frameworks in particular) can be learned as needed.</li>
                 <li>I believe coding standards and best practices are crucial to the long-term success of a digital product. I am not a "code ninja". If anything, I like to think of myself as a code janitor.</li>
                 <li>I believe that a good user interface is like a joke : you shouldn't have to explain it.</li>
