update some copy

--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -26,9 +26,9 @@
             <hr>
                 <h2>Skills</h2>
                 <p>
-                    Do you like keywords ? I have project experience with the following tools and technologies :    
+                    Do you like keywords ? I have project experience with the following tools and technologies :
                 </p>
-                <p>Git, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Jekyll, Hugo, Bash.</p>
+                <p>Git, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Parcel, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Jekyll, Hugo, Bash, Figma, Photoshop, Illustrator.</p>
             <hr>
 
             <h2>Work experience</h2>
@@ -41,9 +41,8 @@
                     <div class="description">
                         I joined Isabel Group as a <b>UI engineer</b>. Isabel Group is Belgium's largest fintech, providing banking services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting directly to the CEO, I worked on a variety of projects, including :
                         <ul>
-                            <li>I helped to port part of the Isabel 6 application to React. Specifically, I set up ESlint, PropTypes and unit tests on the project, before developing some components required for the new features.</li>
-                            <li>I launched and lead the UI Community of Practice, gathering designers and developers from all teams within Isabel Group on a regular basis to share experiences and best practices.</li>
-                            <li>I designed and delivered a prototype in HTML / CSS for a new application to be developed in Angular by another team, with new features regularly added.</li>
+                            <li>I helped to port part of the Isabel 6 application to React. Specifically, I set up some of the tooling used on the project (ESlint, PropTypes, unit tests), and developed some components.</li>
+                            <li>I launched and lead a UI 'Community of Practice', gathering designers and developers from all teams within the group on a regular basis to share experiences and best practices.</li>
                         </ul>
                     </div>
                 </li>
