--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -127,7 +127,7 @@ nav {
         height: 100%;
         width: calc(100% + 20px);
         margin-left: -20px;
-        padding: 0 20px 0 20px;
+        padding: 20px 20px 0 20px;
         text-align: left;
         background-image: linear-gradient(
           to bottom right,
