Move all vendor scripts to dependencies and adapt typing and easter egg

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,7 +4,7 @@
   <main class="barba-container home">
     <h1 class="main-title">👋 I'm
       <a href="{{ .Site.BaseURL }}about">Maël Brunet</a>, a
-      <span class="txt-rotate" data-period="2000" data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span>
+      <span class="txt-rotate"></span>
       <br> based in Brussels, Belgium.
     </h1>
   </main>
