Fix font display

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -5,6 +5,7 @@
     url("../fonts/Raleway-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
     url("../fonts/Raleway-LightItalic.woff") format("woff");
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -23,6 +25,7 @@
     url("../fonts/Raleway-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +35,7 @@
     url("../fonts/Raleway-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -40,6 +44,7 @@
     url("../fonts/Raleway-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -49,4 +54,5 @@
     url("../fonts/Raleway-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
