Optimize font loading

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -15,7 +15,8 @@
   <link rel="mask-icon" href="{{ .Site.BaseURL }}safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#1d78ad">
 
-  <link rel="stylesheet" rel="preload" href="{{ .Site.BaseURL }}styles/main.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}styles/main.css">
+  <link rel="preload" href="{{ .Site.BaseURL }}fonts/Raleway-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <noscript>
     <style>
       .barba-container {
