--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -5,7 +5,7 @@
     url("../fonts/Raleway-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -15,7 +15,7 @@
     url("../fonts/Raleway-LightItalic.woff") format("woff");
   font-weight: 300;
   font-style: italic;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -25,7 +25,7 @@
     url("../fonts/Raleway-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -35,7 +35,7 @@
     url("../fonts/Raleway-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -44,7 +44,7 @@
     url("../fonts/Raleway-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -54,5 +54,5 @@
     url("../fonts/Raleway-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
-  font-display: swap;
+  font-display: optional;
 }
