Update some content

--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -28,7 +28,7 @@
                 <p>
                     Do you like keywords ? I have project experience with the following tools and technologies :
                 </p>
-                <p>Git, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Parcel, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Jekyll, Hugo, Bash, Figma, Photoshop, Illustrator.</p>
+                <p>Git, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Rollup, Parcel, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Jekyll, Hugo, Bash, Figma, Photoshop, Illustrator, Agile methodologies.</p>
             <hr>
 
             <h2>Work experience</h2>
