Show copyright on mobile and adjust footer layout

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -29,8 +29,8 @@
             </a>
         </div>
         <div class="copyright">
-            Hand-crafted with ♥️ and ☕. // Source code available on
-            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>. // Try typing "unicorn" anywhere.
+            Hand-crafted with ♥️ and ☕ // Source code available on
+            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a> <span class="easter-egg">// Try typing "unicorn" anywhere</span>
         </div>
     </footer>
 
