--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -29,14 +29,15 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px 20px 60px;
-  font-size: 62.5%;
-  color: $text-color;
+  font-size: 1rem;
   font-family: $text-font-stack;
+  line-height: 1.5;
+  color: $text-color;
   border-bottom: 4px solid $green;
 
   @include respond-to(medium) {
     min-height: calc(100vh - 105px);
-    margin: 20px;
+    margin: 0 20px;
     border: 4px solid $green;
     border-image: linear-gradient(to bottom right, $blue 0%, $green 100%);
     border-image-slice: 1;
@@ -77,14 +78,8 @@ h3 {
   font-size: 1.5rem;
 }
 
-p,
-label,
-li,
-input,
-textarea,
-button {
-  font-size: 1rem;
-  line-height: 1.5;
+li {
+  margin: 1rem 0;
 }
 
 section {
