--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,20 +1,17 @@
 footer {
   position: absolute;
-  bottom: -50px;
+  bottom: -95px;
   width: calc(100% - 40px);
-  margin: 20px 0;
+  margin-bottom: 10px;
 
   @include respond-to(medium) {
-    bottom: -85px;
+    bottom: -105px;
   }
 
   .social {
     display: flex;
     justify-content: center;
-
-    @include respond-to(medium) {
-      margin-bottom: 10px;
-    }
+    margin-bottom: 20px;
   }
 
   .social-link {
@@ -27,7 +24,7 @@ footer {
     border: 4px solid $green;
     background-color: #fff;
     overflow: hidden;
-    transition: all .3s;
+    transition: all 0.3s;
 
     @include respond-to(medium) {
       height: 80px;
@@ -67,7 +64,7 @@ footer {
       height: 22px;
       width: 100%;
       fill: $blue;
-      transition: all .3s ease-out;
+      transition: all 0.3s ease-out;
 
       @include respond-to(medium) {
         height: 32px;
@@ -76,15 +73,20 @@ footer {
   }
 
   .copyright {
-    display: none;
+    min-height: 36px;
     text-align: center;
+    font-size: 0.8rem;
 
     @include respond-to(medium) {
-      display: block;
+      min-height: none;
     }
+  }
 
-    .strike {
-      text-decoration: line-through;
+  .easter-egg {
+    display: none;
+
+    @include respond-to(medium) {
+      display: inline-block;
     }
   }
 }
