--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -15,9 +15,13 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 0 0 4rem;
+    margin: 0;
     padding: 0;
     list-style: none;
+
+    &:not(:last-of-type) {
+      margin: 0 0 4rem;
+    }
 
     @supports (display: grid) {
       display: grid;
