--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -48,7 +48,7 @@ a {
   display: inline;
   color: $link-color;
   text-decoration: none;
-  border-bottom: 1px dashed $link-color;
+  border-bottom: 1px dashed currentColor;
 
   @include on-event {
     color: $blue;
